          some platforms coredumps were not being reported in $?.
          Many thanks to the Debian Perl folks for finding this,
          particularly Gregor Herrmann.

        * TEST: Better diagnostics from t/08_core.t.

        * TEST: t/08_core.t now cleans up its core files after running.
          Thanks to Gregor Herrmann for spotting this.

0.16  Sun Sep 14 11:29:17 AUSEST 2008
        * DOCUMENTATION: Updated documentation on $EXITVAL to provide
          extra clarification.  Many thanks again to Elliot Shank
          for the feedback!

        * DOCUMENTATION: Noted that run() and system() are aliases for each
          other.  Thanks again for Elliot Shank for the feedback.

        * DOCUMENTATION: Fixed a few missing double-quotes in the
          systemx() documentation.  Thanks to Andrew Dent for spotting these!

        * DOCUMENTATION: Added a feedback section.  If you find this module
          useful, consider rating it at
          http://cpanratings.perl.org/rate/?distribution=IPC-System-Simple

        * BUILD: Upgraded to Module::Install 0.77

0.15  Sat Jul 19 23:26:18 PDT 2008
        - runx() is now correctly in @EXPORT_OK.  Many thanks
          to Elliot "clonezone" Shank for spotting this in
          RT #37793.
        - Added exports test case.

0.14  Sat Jul 19 00:26:01 AEST 2008
        - We should now recognise "not implemented on this architecture"
          POSIX errors from Perl 5.11.0
        - Fixed an invalid specification of resources in META.yml.

0.13  Thu Jul 17 20:36:42 AEST 2008
        - Added examples directory with examples.
        - Updated manifest to include error message regession tests.
        - Test::Kwalitee is now marked as an author-only test.
        - Added tests for correct handling of 32-bit values in
          win32.t.  Corrected documentation regarding Win32 exitval
          size.  Thanks to Jan Dubois for alerting me to the 32-bitness
          of Windows exit values.